// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Lexer Tokens are generated correctly 1`] = `
Array [
  Object {
    "TAG": 0,
    "_0": 0,
    "_1": "
",
  },
  Object {
    "TAG": 19,
    "_0": 4,
    "_1": "Abc",
  },
  Object {
    "TAG": 23,
    "_0": 8,
    "_1": "d",
  },
  Object {
    "TAG": 23,
    "_0": 10,
    "_1": "e",
  },
  Object {
    "TAG": 22,
    "_0": 11,
  },
  Object {
    "TAG": 21,
    "_0": 12,
  },
  Object {
    "TAG": 0,
    "_0": 15,
    "_1": " ",
  },
  Object {
    "TAG": 28,
    "_0": 18,
  },
  Object {
    "TAG": 2,
    "_0": 19,
    "_1": "f",
  },
  Object {
    "TAG": 0,
    "_0": 25,
    "_1": " ",
  },
  Object {
    "TAG": 20,
    "_0": 28,
  },
  Object {
    "TAG": 21,
    "_0": 29,
  },
  Object {
    "TAG": 20,
    "_0": 31,
  },
  Object {
    "TAG": 0,
    "_0": 34,
    "_1": "
",
  },
  Object {
    "TAG": 23,
    "_0": 38,
    "_1": "match",
  },
  Object {
    "TAG": 23,
    "_0": 44,
    "_1": "g",
  },
  Object {
    "TAG": 23,
    "_0": 46,
    "_1": "with",
  },
  Object {
    "TAG": 12,
    "_0": 51,
  },
  Object {
    "TAG": 23,
    "_0": 52,
    "_1": "h",
  },
  Object {
    "TAG": 9,
    "_0": 53,
  },
  Object {
    "TAG": 5,
    "_0": 55,
  },
  Object {
    "TAG": 8,
    "_0": 59,
  },
  Object {
    "TAG": 23,
    "_0": 61,
    "_1": "i",
  },
  Object {
    "TAG": 9,
    "_0": 62,
  },
  Object {
    "TAG": 10,
    "_0": 64,
  },
  Object {
    "TAG": 2,
    "_0": 65,
    "_1": "j",
  },
  Object {
    "TAG": 11,
    "_0": 68,
  },
  Object {
    "TAG": 8,
    "_0": 69,
  },
  Object {
    "TAG": 23,
    "_0": 71,
    "_1": "k",
  },
  Object {
    "TAG": 13,
    "_0": 72,
  },
  Object {
    "TAG": 0,
    "_0": 76,
    "_1": "
  ",
  },
  Object {
    "TAG": 28,
    "_0": 81,
  },
  Object {
    "TAG": 23,
    "_0": 82,
    "_1": "k",
  },
  Object {
    "TAG": 0,
    "_0": 86,
    "_1": "
",
  },
  Object {
    "TAG": 23,
    "_0": 90,
    "_1": "with",
  },
  Object {
    "TAG": 12,
    "_0": 95,
  },
  Object {
    "TAG": 23,
    "_0": 96,
    "_1": "h",
  },
  Object {
    "TAG": 9,
    "_0": 97,
  },
  Object {
    "TAG": 6,
    "_0": 99,
  },
  Object {
    "TAG": 8,
    "_0": 104,
  },
  Object {
    "TAG": 23,
    "_0": 106,
    "_1": "l",
  },
  Object {
    "TAG": 9,
    "_0": 107,
  },
  Object {
    "TAG": 10,
    "_0": 109,
  },
  Object {
    "TAG": 2,
    "_0": 110,
    "_1": "m",
  },
  Object {
    "TAG": 8,
    "_0": 113,
  },
  Object {
    "TAG": 18,
    "_0": 115,
  },
  Object {
    "TAG": 23,
    "_0": 118,
    "_1": "rest",
  },
  Object {
    "TAG": 11,
    "_0": 122,
  },
  Object {
    "TAG": 13,
    "_0": 123,
  },
  Object {
    "TAG": 0,
    "_0": 127,
    "_1": "
  ",
  },
  Object {
    "TAG": 24,
    "_0": 132,
  },
  Object {
    "TAG": 23,
    "_0": 134,
    "_1": "map",
  },
  Object {
    "TAG": 23,
    "_0": 138,
    "_1": "rest",
  },
  Object {
    "TAG": 23,
    "_0": 149,
    "_1": "with",
  },
  Object {
    "TAG": 12,
    "_0": 154,
  },
  Object {
    "TAG": 23,
    "_0": 155,
    "_1": "n",
  },
  Object {
    "TAG": 8,
    "_0": 156,
  },
  Object {
    "TAG": 23,
    "_0": 158,
    "_1": "o",
  },
  Object {
    "TAG": 13,
    "_0": 159,
  },
  Object {
    "TAG": 8,
    "_0": 160,
  },
  Object {
    "TAG": 3,
    "_0": 162,
    "_1": 0,
  },
  Object {
    "TAG": 24,
    "_0": 164,
  },
  Object {
    "TAG": 0,
    "_0": 167,
    "_1": "
    First ",
  },
  Object {
    "TAG": 28,
    "_0": 180,
  },
  Object {
    "TAG": 23,
    "_0": 181,
    "_1": "n",
  },
  Object {
    "TAG": 0,
    "_0": 185,
    "_1": " ",
  },
  Object {
    "TAG": 28,
    "_0": 188,
  },
  Object {
    "TAG": 23,
    "_0": 189,
    "_1": "o",
  },
  Object {
    "TAG": 0,
    "_0": 193,
    "_1": "
    ",
  },
  Object {
    "TAG": 23,
    "_0": 201,
    "_1": "with",
  },
  Object {
    "TAG": 12,
    "_0": 206,
  },
  Object {
    "TAG": 23,
    "_0": 207,
    "_1": "n",
  },
  Object {
    "TAG": 8,
    "_0": 208,
  },
  Object {
    "TAG": 23,
    "_0": 210,
    "_1": "o",
  },
  Object {
    "TAG": 13,
    "_0": 211,
  },
  Object {
    "TAG": 8,
    "_0": 212,
  },
  Object {
    "TAG": 23,
    "_0": 214,
    "_1": "index",
  },
  Object {
    "TAG": 0,
    "_0": 222,
    "_1": "
    ",
  },
  Object {
    "TAG": 28,
    "_0": 229,
  },
  Object {
    "TAG": 23,
    "_0": 230,
    "_1": "index",
  },
  Object {
    "TAG": 0,
    "_0": 238,
    "_1": " ",
  },
  Object {
    "TAG": 28,
    "_0": 241,
  },
  Object {
    "TAG": 23,
    "_0": 242,
    "_1": "n",
  },
  Object {
    "TAG": 0,
    "_0": 246,
    "_1": " ",
  },
  Object {
    "TAG": 28,
    "_0": 249,
  },
  Object {
    "TAG": 23,
    "_0": 250,
    "_1": "o",
  },
  Object {
    "TAG": 0,
    "_0": 254,
    "_1": "
  ",
  },
  Object {
    "TAG": 24,
    "_0": 259,
  },
  Object {
    "TAG": 20,
    "_0": 261,
  },
  Object {
    "TAG": 23,
    "_0": 262,
    "_1": "map",
  },
  Object {
    "TAG": 24,
    "_0": 266,
  },
  Object {
    "TAG": 0,
    "_0": 269,
    "_1": "
",
  },
  Object {
    "TAG": 20,
    "_0": 273,
  },
  Object {
    "TAG": 23,
    "_0": 274,
    "_1": "match",
  },
  Object {
    "TAG": 0,
    "_0": 282,
    "_1": "
",
  },
  Object {
    "TAG": 24,
    "_0": 285,
  },
  Object {
    "TAG": 28,
    "_0": 285,
  },
  Object {
    "TAG": 4,
    "_0": 287,
    "_1": -1.5,
  },
  Object {
    "TAG": 24,
    "_0": 292,
  },
  Object {
    "TAG": 0,
    "_0": 295,
    "_1": "
{ p %
",
  },
  Object {
    "TAG": 1,
    "_0": 304,
    "_1": " \\" \\\\ ",
  },
  Object {
    "TAG": 0,
    "_0": 311,
    "_1": "
",
  },
  Object {
    "TAG": 1,
    "_0": 314,
    "_1": " nested {* comment *} ",
  },
  Object {
    "TAG": 0,
    "_0": 338,
    "_1": "
",
  },
  Object {
    "TAG": 28,
    "_0": 341,
  },
  Object {
    "TAG": 2,
    "_0": 342,
    "_1": " \\\\ ",
  },
  Object {
    "TAG": 0,
    "_0": 351,
    "_1": "
",
  },
  Object {
    "TAG": 28,
    "_0": 354,
  },
  Object {
    "TAG": 2,
    "_0": 355,
    "_1": " \\" ",
  },
  Object {
    "TAG": 0,
    "_0": 364,
    "_1": "
",
  },
  Object {
    "TAG": 28,
    "_0": 367,
  },
  Object {
    "TAG": 23,
    "_0": 370,
    "_1": "a",
  },
  Object {
    "TAG": 0,
    "_0": 374,
    "_1": "
",
  },
  Object {
    "TAG": 1,
    "_0": 377,
    "_1": " {q*r ",
  },
  Object {
    "TAG": 0,
    "_0": 385,
    "_1": "
",
  },
  Object {
    "TAG": 23,
    "_0": 389,
    "_1": "match",
  },
  Object {
    "TAG": 23,
    "_0": 395,
    "_1": "t",
  },
  Object {
    "TAG": 23,
    "_0": 397,
    "_1": "with",
  },
  Object {
    "TAG": 14,
    "_0": 402,
  },
  Object {
    "TAG": 4,
    "_0": 403,
    "_1": 1.5,
  },
  Object {
    "TAG": 8,
    "_0": 406,
  },
  Object {
    "TAG": 2,
    "_0": 408,
    "_1": "2",
  },
  Object {
    "TAG": 15,
    "_0": 411,
  },
  Object {
    "TAG": 0,
    "_0": 415,
    "_1": "
  ",
  },
  Object {
    "TAG": 28,
    "_0": 420,
  },
  Object {
    "TAG": 19,
    "_0": 421,
    "_1": "S",
  },
  Object {
    "TAG": 0,
    "_0": 425,
    "_1": "
",
  },
  Object {
    "TAG": 20,
    "_0": 429,
  },
  Object {
    "TAG": 23,
    "_0": 430,
    "_1": "match",
  },
  Object {
    "TAG": 0,
    "_0": 438,
    "_1": "",
  },
  Object {
    "TAG": 29,
    "_0": 438,
  },
]
`;

exports[`Parser Components 1`] = `
Array [
  Object {
    "TAG": 0,
    "_0": "
",
    "_1": 3,
  },
  Object {
    "TAG": 5,
    "children": Array [
      Array [
        "G",
        Object {
          "TAG": 1,
          "_0": 75,
          "_1": Array [
            Object {
              "TAG": 0,
              "_0": "
     h ",
              "_1": 3,
            },
            Object {
              "TAG": 1,
              "default": Object {
                "TAG": 0,
                "_0": 56,
                "_1": "i",
                "_2": 1,
              },
              "loc": 55,
              "nullables": Array [],
            },
            Object {
              "TAG": 0,
              "_0": " ",
              "_1": 3,
            },
            Object {
              "TAG": 0,
              "_0": "
   ",
              "_1": 3,
            },
          ],
        },
      ],
      Array [
        "Children",
        Object {
          "TAG": 1,
          "_0": 125,
          "_1": Array [
            Object {
              "TAG": 0,
              "_0": "
   k
   ",
              "_1": 3,
            },
            Object {
              "TAG": 5,
              "children": Array [],
              "loc": 94,
              "name": "L",
              "props": Array [
                Array [
                  "m",
                  Object {
                    "TAG": 11,
                    "_0": 98,
                    "_1": Array [
                      Array [
                        "n",
                        Object {
                          "TAG": 12,
                          "_0": 102,
                          "_1": "o",
                        },
                      ],
                      Array [
                        "p",
                        Object {
                          "TAG": 8,
                          "_0": 108,
                          "_1": Array [
                            Object {
                              "TAG": 12,
                              "_0": 109,
                              "_1": "q",
                            },
                          ],
                        },
                      ],
                      Array [
                        "r",
                        Object {
                          "TAG": 12,
                          "_0": 113,
                          "_1": "r",
                        },
                      ],
                    ],
                  },
                ],
              ],
            },
            Object {
              "TAG": 0,
              "_0": "
",
              "_1": 3,
            },
          ],
        },
      ],
    ],
    "loc": 4,
    "name": "A",
    "props": Array [
      Array [
        "b",
        Object {
          "TAG": 12,
          "_0": 9,
          "_1": "b",
        },
      ],
      Array [
        "c",
        Object {
          "TAG": 5,
          "_0": 16,
          "_1": 1,
        },
      ],
      Array [
        "d",
        Object {
          "TAG": 4,
          "_0": 23,
          "_1": "e",
        },
      ],
      Array [
        "f",
        Object {
          "TAG": 3,
          "_0": 32,
        },
      ],
    ],
  },
  Object {
    "TAG": 0,
    "_0": "
",
    "_1": 3,
  },
]
`;

exports[`Parser Mapping 1`] = `
Array [
  Object {
    "TAG": 0,
    "_0": "
",
    "_1": 3,
  },
  Object {
    "TAG": 3,
    "_0": 4,
    "_1": Object {
      "TAG": 12,
      "_0": 8,
      "_1": "a",
    },
    "_2": Array [
      Object {
        "nodes": Array [
          Object {
            "TAG": 0,
            "_0": "
  ",
            "_1": 3,
          },
          Object {
            "TAG": 1,
            "default": Object {
              "TAG": 0,
              "_0": 27,
              "_1": "b",
              "_2": 1,
            },
            "loc": 26,
            "nullables": Array [],
          },
          Object {
            "TAG": 0,
            "_0": "
",
            "_1": 3,
          },
        ],
        "patterns": Array [
          Array [
            Object {
              "TAG": 11,
              "_0": 15,
              "_1": Array [
                Array [
                  "b",
                  Object {
                    "TAG": 12,
                    "_0": 16,
                    "_1": "b",
                  },
                ],
              ],
            },
          ],
        ],
      },
    ],
  },
  Object {
    "TAG": 0,
    "_0": "
",
    "_1": 3,
  },
  Object {
    "TAG": 3,
    "_0": 46,
    "_1": Object {
      "TAG": 12,
      "_0": 50,
      "_1": "c",
    },
    "_2": Array [
      Object {
        "nodes": Array [
          Object {
            "TAG": 0,
            "_0": "
  ",
            "_1": 3,
          },
          Object {
            "TAG": 1,
            "default": Object {
              "TAG": 0,
              "_0": 81,
              "_1": "e",
              "_2": 1,
            },
            "loc": 80,
            "nullables": Array [],
          },
          Object {
            "TAG": 0,
            "_0": "
",
            "_1": 3,
          },
        ],
        "patterns": Array [
          Array [
            Object {
              "TAG": 11,
              "_0": 60,
              "_1": Array [
                Array [
                  "d",
                  Object {
                    "TAG": 3,
                    "_0": 64,
                  },
                ],
                Array [
                  "e",
                  Object {
                    "TAG": 12,
                    "_0": 70,
                    "_1": "e",
                  },
                ],
              ],
            },
          ],
        ],
      },
      Object {
        "nodes": Array [
          Object {
            "TAG": 0,
            "_0": "
  ",
            "_1": 3,
          },
          Object {
            "TAG": 1,
            "default": Object {
              "TAG": 0,
              "_0": 116,
              "_1": "f",
              "_2": 1,
            },
            "loc": 115,
            "nullables": Array [],
          },
          Object {
            "TAG": 0,
            "_0": "
",
            "_1": 3,
          },
        ],
        "patterns": Array [
          Array [
            Object {
              "TAG": 11,
              "_0": 94,
              "_1": Array [
                Array [
                  "d",
                  Object {
                    "TAG": 2,
                    "_0": 98,
                  },
                ],
                Array [
                  "f",
                  Object {
                    "TAG": 12,
                    "_0": 105,
                    "_1": "f",
                  },
                ],
              ],
            },
          ],
        ],
      },
    ],
  },
  Object {
    "TAG": 0,
    "_0": "
",
    "_1": 3,
  },
  Object {
    "TAG": 3,
    "_0": 135,
    "_1": Object {
      "TAG": 12,
      "_0": 139,
      "_1": "g",
    },
    "_2": Array [
      Object {
        "nodes": Array [
          Object {
            "TAG": 0,
            "_0": "
  ",
            "_1": 3,
          },
          Object {
            "TAG": 1,
            "default": Object {
              "TAG": 0,
              "_0": 161,
              "_1": "i",
              "_2": 1,
            },
            "loc": 160,
            "nullables": Array [],
          },
          Object {
            "TAG": 0,
            "_0": " ",
            "_1": 3,
          },
          Object {
            "TAG": 1,
            "default": Object {
              "TAG": 0,
              "_0": 169,
              "_1": "j",
              "_2": 1,
            },
            "loc": 168,
            "nullables": Array [],
          },
          Object {
            "TAG": 0,
            "_0": "
",
            "_1": 3,
          },
        ],
        "patterns": Array [
          Array [
            Object {
              "TAG": 11,
              "_0": 146,
              "_1": Array [
                Array [
                  "h",
                  Object {
                    "TAG": 12,
                    "_0": 147,
                    "_1": "h",
                  },
                ],
              ],
            },
            Object {
              "TAG": 12,
              "_0": 151,
              "_1": "i",
            },
          ],
        ],
      },
    ],
  },
  Object {
    "TAG": 0,
    "_0": "
",
    "_1": 3,
  },
]
`;

exports[`Parser Matching 1`] = `
Array [
  Object {
    "TAG": 0,
    "_0": "
",
    "_1": 3,
  },
  Object {
    "TAG": 2,
    "_0": 4,
    "_1": Array [
      Object {
        "TAG": 12,
        "_0": 10,
        "_1": "a",
      },
    ],
    "_2": Array [
      Object {
        "nodes": Array [
          Object {
            "TAG": 0,
            "_0": "
  b
",
            "_1": 3,
          },
        ],
        "patterns": Array [
          Array [
            Object {
              "TAG": 5,
              "_0": 20,
              "_1": 1,
            },
          ],
        ],
      },
      Object {
        "nodes": Array [
          Object {
            "TAG": 0,
            "_0": "
  c
",
            "_1": 3,
          },
        ],
        "patterns": Array [
          Array [
            Object {
              "TAG": 5,
              "_0": 37,
              "_1": 2,
            },
          ],
          Array [
            Object {
              "TAG": 5,
              "_0": 47,
              "_1": 3,
            },
          ],
        ],
      },
      Object {
        "nodes": Array [
          Object {
            "TAG": 0,
            "_0": "
  d
",
            "_1": 3,
          },
        ],
        "patterns": Array [
          Array [
            Object {
              "TAG": 5,
              "_0": 64,
              "_1": 4,
            },
          ],
        ],
      },
    ],
  },
  Object {
    "TAG": 0,
    "_0": "
",
    "_1": 3,
  },
  Object {
    "TAG": 2,
    "_0": 89,
    "_1": Array [
      Object {
        "TAG": 12,
        "_0": 95,
        "_1": "e",
      },
      Object {
        "TAG": 12,
        "_0": 98,
        "_1": "f",
      },
    ],
    "_2": Array [
      Object {
        "nodes": Array [
          Object {
            "TAG": 0,
            "_0": "
  ",
            "_1": 3,
          },
          Object {
            "TAG": 1,
            "default": Object {
              "TAG": 0,
              "_0": 126,
              "_1": "g",
              "_2": 1,
            },
            "loc": 125,
            "nullables": Array [],
          },
          Object {
            "TAG": 0,
            "_0": "
",
            "_1": 3,
          },
        ],
        "patterns": Array [
          Array [
            Object {
              "TAG": 3,
              "_0": 108,
            },
            Object {
              "TAG": 11,
              "_0": 114,
              "_1": Array [
                Array [
                  "g",
                  Object {
                    "TAG": 12,
                    "_0": 115,
                    "_1": "g",
                  },
                ],
              ],
            },
          ],
        ],
      },
      Object {
        "nodes": Array [
          Object {
            "TAG": 0,
            "_0": "
  h
",
            "_1": 3,
          },
        ],
        "patterns": Array [
          Array [
            Object {
              "TAG": 2,
              "_0": 139,
            },
            Object {
              "TAG": 12,
              "_0": 146,
              "_1": "_",
            },
          ],
        ],
      },
    ],
  },
  Object {
    "TAG": 0,
    "_0": "
",
    "_1": 3,
  },
  Object {
    "TAG": 2,
    "_0": 171,
    "_1": Array [
      Object {
        "TAG": 12,
        "_0": 177,
        "_1": "tuple",
      },
      Object {
        "TAG": 12,
        "_0": 184,
        "_1": "dict",
      },
    ],
    "_2": Array [
      Object {
        "nodes": Array [
          Object {
            "TAG": 0,
            "_0": "
  m
",
            "_1": 3,
          },
        ],
        "patterns": Array [
          Array [
            Object {
              "TAG": 7,
              "_0": 194,
              "_1": Array [
                Object {
                  "TAG": 12,
                  "_0": 195,
                  "_1": "i",
                },
                Object {
                  "TAG": 4,
                  "_0": 198,
                  "_1": "j",
                },
              ],
            },
            Object {
              "TAG": 10,
              "_0": 204,
              "_1": Array [
                Array [
                  "k",
                  Object {
                    "TAG": 12,
                    "_0": 208,
                    "_1": "l",
                  },
                ],
              ],
            },
          ],
        ],
      },
    ],
  },
  Object {
    "TAG": 0,
    "_0": "
",
    "_1": 3,
  },
]
`;
